tests/frontend/fail/array/create_arg_array_type_mismatch.act
contract B

contract A

constructor
interface constructor(uint[2] n1)


constructor
interface constructor()

creates
  A a := create A([true, false])
